--- a/app/src/main/res/layout/listkamar.xml
+++ b/app/src/main/res/layout/listkamar.xml
@@ -24,10 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/hargakamar"
         android:layout_alignBottom="@+id/hargakamar"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
+        android:layout_alignEnd="@+id/textView14"
+        android:layout_alignRight="@+id/textView14"
         android:text="No Kamar"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="16dp" />
@@ -36,9 +34,9 @@
         android:id="@+id/hargakamar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView13"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="20dp"
         android:text="Harga Kamar"
         tools:layout_editor_absoluteX="271dp"
         tools:layout_editor_absoluteY="16dp" />
