--- a/app/src/main/res/layout/trans.xml
+++ b/app/src/main/res/layout/trans.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,9 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
         android:text="Detaill Kamar"
         tools:layout_editor_absoluteX="151dp"
         tools:layout_editor_absoluteY="25dp" />
@@ -17,12 +20,15 @@
         android:id="@+id/lamamenginap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView8"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="Lama Menginap"
         android:inputType="textPersonName"
         android:textAlignment="center"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="121dp" />
+        tools:layout_editor_absoluteY="78dp" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
