--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,31 +5,32 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Home" />
+        <item
+            android:id="@+id/nav_input"
             android:icon="@drawable/ic_menu_camera"
             android:title="Input Data" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_transaksi"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Transaksi" />
+            android:title="Pesanan" />
 
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_pesan"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Laporan" />
 
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_manage"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Tools" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
